@@ -2,6 +2,11 @@
 --------------------------------------------------------------------------
 Версия 2.0
 --------------
+2011-10-10 erra <erra@ya.ru>
+	* ircd/channel.c: увеличен буфер, используемый для имени канала,
+			что позволит избежать переполнения буфера командой
+			join !длинное_имя при вызове sprintf()
+
 2011-10-03 erra <erra@ya.ru>
 	* ircd/channel.c: починена установка топика сервисами
 
